--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,13 +17,14 @@
     form.addEventListener('submit', webhookSubmit)
     async function webhookSubmit(event) {
         event.preventDefault()
-        const title = "Test Title"
-        const text = "test text"
+        const title = "Title: Test"
+        const text = "Text: test"
         const result = await fetch('/json', {
             method: 'POST',
-            headers: { "contentType":"application/json"},
-            body: {title, text: text}
-        }).then(res => res.json())
+            headers: { "Content-Type": "application/json"},
+            body: JSON.stringify({title: title, text: text})
+            }
+        ).then(res => res.json())
     }    
 </script>
 </html>
