Changes to be committed     modified:   index.js     modified:   views/index.ejs
Added comments to code for clarification

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,10 @@
 </head>
 <body>
     <form id="submitForm">
+        <label for="title">Message Title: </label>
+        <input type="text" name="title" id="title">
+        <label for="text">Text: </label>
+        <input type="text" name="text" id="text">
         <button type="submit" class="btn btn-primary" >Submit</button>
         
     </form>
